--- a/.gitignore
+++ b/.gitignore
@@ -83,11 +83,8 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+# Ignore idea folder
+.idea/
 
 target/
 pom.xml.tag
