--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Build Docker Image
 
 on: [push]
 
@@ -15,3 +15,4 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn package --file pom.xml
+      run: docker build . --file src/main/docker/Dockerfile --tag my-image-name:$(date +%s)
