--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,4 +15,5 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn package --file pom.xml
+    - name: Build Docker Image
       run: docker build . --file src/main/docker/Dockerfile --tag my-image-name:$(date +%s)
